enhance getting catalog
